# learm_ws

./: frames_2025-07-28_07.41.06.gv  frames_2025-08-04_09.12.16.gv
src/learm_controller/: CMakeLists.txt  package.xml
src/learm_controller/config/: learm_controllers.yaml
src/learm_controller/launch/: learm_controller.launch.py
src/learm_moveit/: CMakeLists.txt  package.xml
src/learm_moveit/config/: initial_positions.yaml  joints_limits.yaml  kinematics.yaml  learm.srdf  moveit_controllers.yaml
src/learm_moveit/launch/: moveit.launch.py
src/learm_msgs/: CMakeLists.txt  package.xml
src/learm_py_examples/: package.xml  setup.py
src/learm_py_examples/learm_py_examples/: simple_service_server.py  simple_subscriber.py
src/learm_ros2/: learn_ros2
src/learm_ros2_description/worlds/: learm_world.world
src/learm_utils/: CMakeLists.txt  package.xml
src/learm_utils/learm_utils/: angle_conversion.py
src/learn_ros2/: CMakeLists.txt  package.xml
