<?xml version="1.0"?>
<package format="3">
  <name>learn_ros2</name>
  <version>0.0.0</version>
  <description>My beginner ROS 2 package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
</package>
